# tiny-proj

./: pyproject.toml
src/proj/: __init__.py
src/proj/ch01/: __init__.py  hello.py
src/proj/ch02/: crowsnest.py
src/proj/ch03/: picnic.py
src/proj/ch04/: jump.py
src/proj/ch05/: howler.py
src/proj/ch06/: wc.py
src/proj/ch07/: gashlycrumb.py
tests/: test_ch01.py  test_ch02.py  test_ch03.py  test_ch04.py  test_ch05.py  test_ch06.py  test_ch07.py
