[project]
name = "proj"
version = "0.1.0"
description = "This is a tiny project for python"
authors = [
    {name = "chenyulue", email = "chenyulue@163.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
]
